[package]
name = "rvst-redis"
version = "0.1.0"
authors = ["rvansant2 <rvansant2@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
redis = "0.17.0"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
